--- a/_config.yml
+++ b/_config.yml
@@ -121,13 +121,13 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-       url: "mailto:info@alibaykara.dev"
+       # url: "mailto:info@alibaykara.dev"
     - label: "Website"
       icon: "fas fa-fw fa-link"
-       url: "https://alibaykara.dev"
+        #url: "https://alibaykara.dev"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-       url: "https://twitter.com/alibaykara"
+       # url: "https://twitter.com/alibaykara"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/"
@@ -143,7 +143,7 @@ footer:
   links:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-       url:  "https://twitter.com/alibaykara"
+       # url:  "https://twitter.com/alibaykara"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url:
@@ -152,7 +152,7 @@ footer:
       # url:
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
-       url:"https://github.com/alibaykara"
+       # url:"https://github.com/alibaykara"
     - label: "Bitbucket"
       icon: "fab fa-fw fa-bitbucket"
       # url:
